# MCTui

./: .gitignore  Cargo.nix  Cargo.toml  README.md  crates-io.list  result
.github/workflows/: actions.yml
assets/: defaultconfig.json
nix/: Cargo.nix  crates-io.nix
src/: LICENSE  constants.rs  main.rs  responsetypes.rs  utils.rs
src/launcher/: authentication.rs  installer.rs  mod.rs  profile.rs
src/mctui/: app.rs  bottomnav.rs  events.rs  home.rs  logger.rs  mod.rs  profilecreator.rs  profilestab.rs  tui.rs  welcome.rs
src/structs/: assets.rs  libraries.rs  mod.rs  settings.rs  versions.rs
src/utils/: files.rs  launch.rs  mod.rs  universal.rs
