[package]
name = "mctui"
version = "0.1.0"
authors = ["noituri"]
edition = "2018"

[dependencies]
reqwest = "0.9.18"
serde = "1.0.92"
serde_json = "1.0.39"
sha-1 = "0.8.1"
lazy_static = "1.3.0"
uuid = "0.7.4"
failure = "0.1.5"
crossterm = "0.19"
tui = { version = "0.14.0", features = ["crossterm"], default-features = false }
crossbeam-channel = "0.3.8"
platform-dirs = "0.3.0"
#futures-util-preview = "0.3.0-alpha.16"
#futures-preview = "0.3.0-alpha.16"
