[package]
name = "mctui"
version = "0.1.0"
authors = ["noituri"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
sha-1 = "0.9"
uuid = { version = "0.8", features = ["v4"] }
crossterm = "0.20"
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
crossbeam-channel = "0.5.1"
platform-dirs = "0.3.0"
async-trait = "0.1.51"
tokio = { version = "1.9.0", features = ["full"] }
futures = "0.3.16"
chrono = { version = "0.4", features = ["serde"]}
thiserror = "1.0"
anyhow = "1.0"
